Changelog
=========

6.7-dev - (unreleased)
----------------------
* Feature: WIP: added a new compound field, frequency_of_updates
  [tiberich #14361]
* Upgrade Step: go to /prefs_install_products_form, install CompoundField
  [tiberich #14361]
* Feature: don't index anymore themes and indicator codes as keywords.
  [ghicaale refs #14383]

6.6 - (2013-04-17)
------------------
* Change: use esri map and geotags widget instead of geo coverage for Assessments
  [ichimdav #8523]
* Feature: Automatically synch daviz workflow state as we do for
  static figures.
  [demarant fixes #14298]
* Bug fix: don't fail for already published figures when syncing state.
  [demarant refs #9974, #10001]
* Change: Removed unnecessary margin for Daviz in indicator.
  Better wording on buttons.
  [demarant refs #9571]
* Bug fix: give better information to users about 2 words minimum
  requirement in IMS text content
  [tiberich #14175]
* Bug fix: alphabetically sort Related Policy Documents in aggregated edit
  and specification view.
* Bug fix: fix data source provenance in assessment view
  [tiberich #14273]

6.5 - (2013-03-15)
------------------
* Bug fix: don't break on specification publishing due to discussion API
  changes
  [tiberich]
* Bug fix: conform to api changes in eea.daviz to allow sortable relations
  to Daviz Vizualizations charts
  [tiberich #13993]

6.4 - (2013-02-21)
---------------------
* Bug fix: fix content rules integration for Assessment
  [tiberich #13895]

6.3 - (2013-02-21)
------------------
* Bug fix: Display charts only when tab is clicked
  [szabozo0 refs #13673]
* Bug fix: fixed data provenance information logic and layout consistency.
  use existing data.info view.
  [demarant refs #9561 and #9571]
* Bug fix: fix adding Assessments from add new item menu
  [tiberich #13897]
* Bug fix: don't fail when reindexing object outside aquisition context
  [tiberich #13836]
* Bug fix: don't call assessment key when checking for it in condition to