@@ -3,7 +3,15 @@ Changelog
 
 6.7-dev - (unreleased)
 ----------------------
+* Upgrade Step: go to
+  http://www.eea.europa.eu/aq_parent/portal_actions/object_buttons/create_version/manage_propertiesForm
+  Change the "Condition (Expression)" to:
+    python: object.restrictedTraverse('@@can_version')()
+  [tiberich #14361]
 * Feature: WIP: added a new compound field, frequency_of_updates
+  [tiberich #14361]
+* Upgrade Step: create a new faceted navigation page that lists expired
+  indicators (they will have the ExpirationDate set in the past)
   [tiberich #14361]
 * Upgrade Step: go to /prefs_install_products_form, install CompoundField
   [tiberich #14361]
